src-tauri/agaric-store/src/pagination/snapshots/agaric_store__pagination__tests__snapshot_page_response_list_children.snap
---
source: src/pagination/tests.rs
assertion_line: 2184
expression: resp
---
items:
  - id: SNAP_CH1
    block_type: content
    content: first child
    parent_id: SNAP_PAR
    position: 1
    deleted_at: ~
    todo_state: ~
    priority: ~
    due_date: ~
    scheduled_date: ~
    page_id: SNAP_PAR
  - id: SNAP_CH2
    block_type: content
    content: second child
    parent_id: SNAP_PAR
    position: 2
    deleted_at: ~
    todo_state: ~
    priority: ~
    due_date: ~
    scheduled_date: ~
    page_id: SNAP_PAR
next_cursor: ~
has_more: false
total_count: ~
