src-tauri/agaric-store/src/pagination/snapshots/agaric_store__pagination__tests__snapshot_page_response_with_cursor.snap
---
source: src/pagination/tests.rs
assertion_line: 2211
expression: resp
---
items:
  - id: SNAP_C01
    block_type: content
    content: child 1
    parent_id: SNAP_PAR2
    position: 1
    deleted_at: ~
    todo_state: ~
    priority: ~
    due_date: ~
    scheduled_date: ~
    page_id: SNAP_PAR2
  - id: SNAP_C02
    block_type: content
    content: child 2
    parent_id: SNAP_PAR2
    position: 2
    deleted_at: ~
    todo_state: ~
    priority: ~
    due_date: ~
    scheduled_date: ~
    page_id: SNAP_PAR2
next_cursor: "[CURSOR]"
has_more: true
total_count: ~
